enabled jwt secret
