# Backend/app/routers/superAdminRouter.js
@@ -38,4 +38,16 @@ router.patch('/users/:userId/status', (req, res, next) => {
   superAdminController.toggleUserStatus(req, res, next);
 });
 
+// Get all registered platform users
+router.get('/users', (req, res, next) => {
+  // #swagger.tags = ['Super Admin']
+  superAdminController.getAllPlatformUsers(req, res, next);
+});
+
+// Existing route (Status update)
+router.patch('/users/:userId/status', (req, res, next) => {
+  // #swagger.tags = ['Super Admin']
+  superAdminController.toggleUserStatus(req, res, next);
+});
+
 module.exports = router;
